maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:28: error: not found: value keepHandOnSideWall
    keepHandOnSideWall(cpt)
    ^