maze.pledge.PledgeMaze.scala.code
override def run() {
  var cpt = 0
  while(getY()!=0){
    if(cpt!=0){
      cpt=0
 	if(estFaceMur()){
    droite()
    cpt=cpt+ 1
  }  
  if(estFaceMur()){
    droite()
    cpt=cpt+1
  }
  if(estFaceMur()){
    droite()
    cpt=cpt+1
  }
  avance()
  gauche()
  cpt=cpt-1
    }
    else{
      avance()
    }
  }
  while(!estSurBiscuit){
    keepHandOnSideWall(cpt)
  }
  prendBiscuit()
  setDirection(Direction.EAST)
}

